fix: Fixed when clicked on nav links title not showing

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -4,6 +4,7 @@
   --font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New, Courier, monospace;
 
   scroll-behavior: smooth;
+  scroll-padding-top: 100px;
 }
 
 /* Theme colors */
